tests/ui/import_staged.stderr
Error [E0019]: `import` doesn't work yet
  --> tests/ui/import_staged.jet:1:1
    |
  1 | import scoring;
    | ^^^^^^
 Why: multi-file programs arrive in M6 — the import forms are already decided (S16)
 Fix: keep everything in one file for now; later: `import "path";`, `import name;`, or add `as alias`
