tests/ui/import_staged.jet
import scoring;

fn main() {
    print("hi");
}
